# backend

./: package-lock.json  package.json
account_server/: .env
account_server/src/controllers/: account.controller.js
map_server/: .env
map_server/src/: findShortestPath.js
map_server/src/controllers/: map.controller.js
map_server/src/models/: map.model.js  mapNode.model.js  noGoZone.model.js  shortPath.model.js  stepList.model.js
map_server/src/routes/: map.route.js
monitor_server/: .env
monitor_server/src/: app.js  server.js
monitor_server/src/ros/: odom_publisher.py  ros_odom_to_websocket.py
robot_node/: map_receiver.py  robot_position_publisher.py  ros_connect_state.py  task_path_listener.py  task_subscriber.py
robot_server/: .env  package.json
robot_server/ros/: odom_publisher.py  publish_task_path.py  robot_status.py  ros_odom_to_websocket.py
robot_server/ros/devel/: .catkin  .rosinstall
robot_server/ros/src/: TaskPath.msg
robot_server/ros/src/custom_msgs/: CMakeLists.txt  package.xml
robot_server/src/: server.js
robot_server/src/controllers/: robot.controller.js  workflowQueue.controller.js
robot_server/src/models/: robot.model.js  workflowQueue.model.js
robot_server/src/routes/: robot.route.js
task_server/: .env  package-lock.json  package.json
task_server/src/: app.js
task_server/src/controllers/: task.controller.js
task_server/src/models/: task.model.js  tasklog.model.js
task_server/src/ros/: rosPublisher.js  rosSubscriber.js
task_server/src/routes/: task.route.js
teleop_server/: server.js
(+16 files in other folders)
